--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 
   </head>
   <body>
+    <style>
+    body{
+      background-color:#D4ECDD;
+    }
+
+    h1{color:#FF0000;
+    }
+    h3{
+      color:#FF5C58;
+    }
+    hr{
+      border-style:none;
+      border-top-style:dotted;
+      border-color:grey;
+      border-width:5px;
+      width:5%;
+    }
+    img{
+      height:200px;
+    }
+      
+    </style>
     <table cellspacing="20">
       <tr>
         <td>  <img src="sumit.png" alt="sumit profile picture"></td>
